@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.007.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.047.
 use strict;
 use warnings;
 
@@ -30,6 +30,7 @@ my %WriteMakefileArgs = (
     "namespace::autoclean" => 0
   },
   "TEST_REQUIRES" => {
+    "Net::EmptyPort" => 0,
     "Test::Consul" => "0.004",
     "Test::Exception" => 0,
     "Test::More" => 0,
@@ -51,6 +52,7 @@ my %FallbackPrereqs = (
   "JSON::MaybeXS" => 0,
   "Moo" => 0,
   "Moo::Role" => 0,
+  "Net::EmptyPort" => 0,
   "Test::Consul" => "0.004",
   "Test::Exception" => 0,
   "Test::More" => 0,
